# Database-Project

./: creazione_tabelle.sql  farma-concettuale.drawio  farma-logica.drawio  popolazione_tabelle.sql
c/: CMakeLists.txt  funzioni.c  funzioni.h  funzioni.h~  main.c
